tests/expectations/compiler/dynamic_dispatch/dynamic_get_missing_type_param_fail.out
Error [ETYC0372156]: The intrinsic `_dynamic_get` requires exactly one type parameter.
    --> compiler-test:12:15
     |
  12 |     let val = _dynamic_get(prog, net, m, key);
     |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
